Added friends route
